Added text colour features

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+#style1 {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+#style1::-webkit-color-swatch {
+    border-radius: 15px;
+    border: none;
+  }
+#style1::-moz-color-swatch {
+    border-radius: 15px;
+    border: none;
+  }
